Add endpoints to story by id and story list
