# app.js
@@ -4,17 +4,16 @@ const bodyParser = require('body-parser');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 const authRouter = require('./src/routes/auth');
+const storiesRouter = require('./src/routes/stories');
+const authenticate = require('./src/auth_helper').authenticate;
 
-const app = new express();
-app.use(bodyParser.urlencoded({
-    limit: '5mb',
-    parameterLimit: 100000,
-    extended: false
-}));
+const app = express();
+app.use(bodyParser.json());
 
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 router.use(authRouter);
+router.use("/stories", authenticate, storiesRouter);
 app.use('/api/v1', router);
 
 let port = 3000;
